- Fixed issue where the chords overlapped the hr's - Fixed issue where the chords are not displayed when there are line breaks without any characters - Fixed issue where the chord sticks to the final lyrics even though they are separated by line breaks

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -77,7 +77,7 @@
   }
 
   .markdown-preview > hr {
-    @apply border border-stone-700;
+    @apply my-5 border border-stone-700;
   }
 
   .markdown-preview span > .chord {
